--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.14",
+    "mongoose": "^6.1.2",
     "mongoose-type-url": "^2.1.0",
+    "mongoose-validator": "^2.1.0",
     "nodemon": "^2.0.15"
   }
 }
