cloud storage||aws||s3

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.1.2",
-    "mongoose-type-url": "^2.1.0",
-    "mongoose-validator": "^2.1.0",
-    "nodemon": "^2.0.15"
+    "aws-sdk": "^2.1047.0",
+    "multer": "^1.4.4"
   }
 }
