--- a/src/package.json
+++ b/src/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "mailnodejs",
+  "name": "zip-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "createZip.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node createZip.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "multer": "^1.4.4-lts.1",
-    "nodemailer": "^6.7.5"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1"
+    "adm-zip": "^0.5.9",
+    "path": "^0.12.7",
+    "pdfreader": "^2.0.0"
   }
 }
